--- a/src/main/resources/templates/output.html
+++ b/src/main/resources/templates/output.html
@@ -8,6 +8,6 @@
         <h1 th:text="#{content.header1}"></h1>
         <h2 th:text="#{content.header3}"></h2>
         <p th:text="#{content.message2} + ${previous} + #{content.message3}"></p>
-        <p><a th:href="@{/input/{aid}(aid=${previous})}">入力画面へ戻る</a></p>
+        <a th:href="@{/input/{aid}(aid=${previous})}"><p th:text="#{content.message7}"></p></a>
     </body>
 </html>
