--- a/src/main/resources/templates/input.html
+++ b/src/main/resources/templates/input.html
@@ -8,7 +8,7 @@
         <h1 th:text="#{content.header1}"></h1>
         <h2 th:text="#{content.header2}"></h2>
         <p th:text="#{content.message1}"></p>
-         <p th:if="${previous} != null" th:text="#{content.message4} + #{content.message2} + ${previous} + #{content.message5}"></p>
+         <p th:if="${previous} != '' " th:text="#{content.message4} + #{content.message2} + ${previous} + #{content.message5}"></p>
         <form method="post" action="/output">
             <input type="text" name="previous">
             <button type="submit" th:text="#{content.message6}"></button>
